--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "set NEXT_TELEMETRY_DISABLED=1 && set TURBOPACK_TRACE=false && next dev --turbopack",
+    "build": "set NEXT_TELEMETRY_DISABLED=1 && set TURBOPACK_TRACE=false && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@convex-dev/auth": "^0.0.88",
+    "@convex-dev/resend": "^0.1.10",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/render": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.26.1",
@@ -28,6 +31,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
+    "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
